--- a/weatherapp/app/templates/base.html
+++ b/weatherapp/app/templates/base.html
@@ -7,7 +7,7 @@
     {% endif %}
   </head>
   <body>
-    <div>Weather: <a href="/">Home</a></div>
+    <div>Weather: <a href="/">Search</a></div>
     <hr>
     {% block content %}{% endblock %}
     {% with messages = get_flashed_messages() %}
