--- a/weatherapp/app/templates/current_weather.html
+++ b/weatherapp/app/templates/current_weather.html
@@ -4,6 +4,7 @@
 table {
     font-family: arial, sans-serif;
     border-collapse: collapse;
+    margin: 0 auto;
 }
 
 td, th {
@@ -17,8 +18,9 @@ tr:nth-child(even) {
 }
 </style>
 <h1>Weather for: {{ title }}</h1>
-<h2>{{ temp }} Kelvin</h2>
-<h3>{{ weatherdescrip }}</h3>
+<center>
+<h2><img src="http://openweathermap.org/img/w/{{ curweathericon }}.png">{{ weatherdescrip }}</h2>
+<h3>{{ temp }} Kelvin</h3></center>
     {% if curweather %}
         <div>
             <table>
@@ -32,9 +34,11 @@ tr:nth-child(even) {
         </div>
     {% endif %}
 
-    {% if forecast_info %}
-        <div>
-            <p>{{ forecast_info }}</p>
-        </div>
-    {% endif %}
+    <!--{% if forecast_info %}-->
+        <!--<div>-->
+            <!--<p>{{ forecast_info }}</p>-->
+        <!--</div>-->
+    <!--{% endif %}-->
+{% include 'daily_weather.html' %}
+
 {% endblock %}
